# vio_mesh_estimate

./: .gitignore  README.md
common/: CMakeLists.txt  package.xml
common/include/common/: ImuFrameSynchronizer.hpp  measurements.h  parallel-process.h  types.h
common/include/common/Time/implementation/: Duration.hpp
common/include/common/kinematics/: Transformation.hpp
common/src/: ImuFrameSynchronizer.cpp  condition.cc  progress-bar.cc  threading-helpers.cc
common/src/Time/: Duration.cpp  Time.cpp
config/: vins_rviz_config.rviz
config/euroc/: euroc_config.yaml  vins_result.csv
depth_mesh/: CMakeLists.txt  package.xml
depth_mesh/config/: flame.rviz  flame_offline_asl.yaml
depth_mesh/include/depth_mesh/: flame.h  mesh_estimator.hpp  params.h  types.h
depth_mesh/include/depth_mesh/optimizers/: nltgv2_l1_graph_regularizer.h
depth_mesh/include/depth_mesh/stereo/: epipolar_geometry.h  inverse_depth_filter.h  inverse_depth_meas_model.h  line_stereo.h
depth_mesh/include/depth_mesh/utils/: delaunay.h  frame.h  image_utils.h  keyframe_selector.h  load_tracker.h  pyramids.h  visualization.h
depth_mesh/launch/: flame_offline_asl.launch
depth_mesh/sample/: flame_offline_asl.cc  utils.cc  utils.h
depth_mesh/sample/dataset_utils/: utils.cc
depth_mesh/sample/ros_sensor_streams/: asl_rgbd_offline_stream.cc  asl_rgbd_offline_stream.h
depth_mesh/src/: flame.cc  mesh_estimator.cpp
depth_mesh/src/optimizers/: nltgv2_l1_graph_regularizer.cc
depth_mesh/src/stereo/: inverse_depth_filter.cc  inverse_depth_meas_model.cc
depth_mesh/src/utils/: delaunay.cc  frame.cc  image_utils.cc  keyframe_selector.cc  pyramids.cc  rasterization.cc
depth_mesh/test/: test_epipolar_geometry.cpp  test_inverse_depth_filter.cpp  test_stereo_epipolar_geometry.cpp
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/include/feature-tracking/: feature-track-extractor.h  feature-tracking-pipeline.h  grided-detector.h  vo-feature-tracking-pipeline.h
feature_tracker/src/: feature-tracking-pipeline.cc  feature-tracking-types.cc  vo-feature-tracking-pipeline.cc
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/config/: flame_offline_asl.yaml  vins_rviz_config.rviz
vins_estimator/config/euroc/: ex_calib_result.yaml  vins_result.csv
vins_estimator/launch/: euroc_one_node.launch  flame_offline_asl.launch
vins_estimator/sample/: main.cc
vins_estimator/sample/ros_sensor_streams/: asl_rgbd_offline_stream.cc  conversions.h  tracked_image_stream.cc
vins_estimator/src/: depth_estimate.cpp  depth_estimate.hpp  estimator.cpp  estimator.h  estimator_node.cpp  parameters.cpp  ros_utils.cc  ros_utils.h
vio_mesh_estimate/: CMakeLists.txt  package.xml
vio_mesh_estimate/launch/: euroc_no_loop.launch
vio_mesh_estimate/src/: estimator_node.cpp
