<?xml version="1.0"?>
<package format="2">
  <name>depth_mesh</name>
  <version>0.0.0</version>
  <description>Code to run feature tracking on vi maps.</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>common</depend>
</package>
