<?xml version="1.0"?>
<package format="2">
  <name>vins_estimator</name>
  <version>0.0.0</version>
  <description>Code to run feature tracking on vi maps.</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>ceres_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
  <depend>common</depend>
  <depend>feature_tracker</depend>
  <depend>depth_mesh</depend>
</package>
