<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>vio_mesh_estimate</name>
  <version>0.0.0</version>
  <description>
    Pose estimate in a sliding window from stereo visual and inertial measurement.
  </description>
  <maintainer email="pangfumin@gmail.com">Fumin Pang</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_cv_pipeline</depend>
  <depend>cv_bridge</depend>
  <depend>feature_tracker</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>camera_model</depend>
  <depend>vins_feature_tracker</depend>
  <depend>stereo_pose_estimate</depend>
  <depend>common</depend>
  <depend>eigen_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>ceres_catkin</depend>
</package>
